<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginRadioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/MyStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CodeStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/LightStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AppThemeLight"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/materialRadioButton" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/DarkStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AppThemeDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/materialRadioButton2" />

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>